infra/kubernetes/notes-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-service
  namespace: notehub
  labels:
    app: notes-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-service
  template:
    metadata:
      labels:
        app: notes-service
    spec:
      containers:
        - name: notes-service
          image: YOUR_DOCKERHUB_USERNAME/notehub-notes:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: notes-service
  namespace: notehub
spec:
  selector:
    app: notes-service
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
